--- a/the_essential_fitness_app/pubspec.yaml
+++ b/the_essential_fitness_app/pubspec.yaml
@@ -30,32 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
-  # Used in any app that interacts with firebase
   firebase_core: ^3.8.0
-
-  # Firebase Authentication (for login, register, logout)
   firebase_auth: ^5.3.0
-
-  # Cloud Firestore (for database CRUD operations)
   cloud_firestore: ^5.4.0
-
-  # (Optional) If you plan to store profile pics, etc.
   firebase_storage: ^12.3.0
-
-  # (Optional) For remembering user login state locally
   shared_preferences: ^2.3.0
   syncfusion_flutter_charts: 31.1.19
-
-  # For Geolocation
   geolocator: 14.0.2
-
-  # For running icons
   font_awesome_flutter: ^10.7.0
+  fl_chart: ^0.65.0
 
 
 
@@ -84,7 +68,7 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
